# mapreaduce

./: .gitignore  CMakeLists.txt  README.md
cmake/: common.cmake
example/wordcount/: CMakeLists.txt  wc.cpp  wc.h
protos/: mrrpcfunction.proto
src/: CMakeLists.txt  master.cpp  mr_master.cpp  mrrpcfunction.grpc.pb.cc  mrrpcfunction.pb.cc  worker.cpp
src/include/: kv.hpp  master.h  mr_master.h  mr_reducer.h  mrrpcfunction.grpc.pb.h  mrrpcfunction.pb.h  rpc.h  worker.h
src/mr_master/: CMakeLists.txt  master.cpp  mr_master.cpp  rpc.cpp
src/mr_worker/: CMakeLists.txt  mr_worker.cpp  worker.cpp
src/rpc/: CMakeLists.txt  mrrpcfunction.grpc.pb.cc  mrrpcfunction.pb.cc  mrrpcfunction.pb.h
test/grpc/helloworld/: CMakeLists.txt  Makefile  greeter_client.cc  greeter_server.cc
